--- a/P5/Lab5JoaoFelipe/.classpath
+++ b/P5/Lab5JoaoFelipe/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Testes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="Bibliotecas/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
